# KRBSG2

./: .gitignore  .gitmodules  Attack.h  CMakeLists.txt  CMakePresets.json  CollisionDispatcher.cpp  CollisionDispatcher.h  Credits.txt  EnemyShip.cpp  EnemyShip.h  Flyoff.lua  GameObjectFactory.cpp  GameObjectFactory.h  GameplaySession.cpp  GameplaySession.h  Hud.cpp  Hud.h  KRBSG2.cpp  KRBSG2.h  KRBSG2Constants.h  KRBSGLuaBinding.cpp  KRBSGLuaBinding.h  PauseMenu.cpp  PauseMenu.h  PlayerShip.cpp  PlayerShip.h  PoolParty.cpp  PoolParty.h  ProjectileFactory.cpp  ProjectileFactory.h  README.md  ScoreKeeper.cpp  ScoreKeeper.h  SpriteFactory.cpp  SpriteFactory.h  Weapon.cpp  Weapon.h  basic.vert.glsl  blaster.lua  blaster_bolt.lua  (+9 more)
ArtAssets/: Blaster1.pdn  Ship1.pdn
app/: build.gradle.kts
app/src/main/java/com/theK42/krbsg2/: MainActivity.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
src/main/: AndroidManifest.xml
src/main/java/com/theK42/krbsg2/: MainActivity.java
src/main/res/values/: strings.xml
